--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "styled-components": "^6.1.0",
+    "@types/styled-components": "^5.1.30",
     "swiper": "^11.2.2",
     "three": "^0.173.0"
   },
