--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/model-viewer": "^4.0.0",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.17.14",
     "@types/aframe": "^1.2.7",
@@ -17,12 +18,19 @@
     "@types/styled-components": "^5.1.30",
     "@types/three": "^0.173.0",
     "aframe": "^1.6.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.5.0",
+    "lucide-react": "^0.483.0",
     "next": "15.1.4",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "styled-components": "^6.1.0",
     "swiper": "^11.2.2",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.173.0"
   },
   "devDependencies": {
