--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,9 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/types/**/*.d.ts"
+    "src/types/**/*.d.ts",
+    "src/**/*.d.ts",
+    "src/custom-types.d.ts"
   ],
   "exclude": ["node_modules"]
 }
